--- a/04-local-server/src/index.html
+++ b/04-local-server/src/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <canvas class="webgl"></canvas>
+    <div class="flex-container">
+        <canvas class="webgl"></canvas>
+    </div>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
