--- a/04-local-server/src/index.html
+++ b/04-local-server/src/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="random">
+        <h1>text</h1>
+    </div>
     <div class="flex-container">
         <canvas class="webgl"></canvas>
     </div>
