--- a/04-local-server/src/index.html
+++ b/04-local-server/src/index.html
@@ -13,6 +13,6 @@
     <div class="flex-container">
         <canvas class="webgl"></canvas>
     </div>
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="./script.js" defer></script>
 </body>
 </html>
